@@ -24,6 +24,8 @@ Features
 Bugfixes
 --------
 
+* More robust shortcodes, no need to escape URLs in reSt, work better
+  with LaTeX, etc.
 * Fixes post scanner plugin order (Issue #2720)
 * Rename ``POSTS_SECTION_ARE_INDEXES`` to ``POSTS_SECTIONS_ARE_INDEXES``
 * Make date ranges work in shortcode-based post lists (Issue #2690)
